--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 #searched-city {
   position: absolute;
   margin: auto;
-  width: 500px;
+  max-width: 500px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -14,7 +14,7 @@ body {
 #search-btn {
   position: absolute;
   margin: auto;
-  top: 55%;
+  top: 58%;
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: white;
@@ -34,7 +34,13 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   display: none;
-  height: 420px;
+  max-height: 440px;
+  max-width: 500px;
+}
+
+#card-image {
+  width: 100px;
+  height: 100px;
 }
 
 @media screen and (max-width: 501px) {
